--- a/styles.css
+++ b/styles.css
@@ -254,7 +254,7 @@ body {
     border-radius: 5px;
     font-weight: bold;
     font-size: 12px;
-    margin-left: 10px;
+    margin-right: 10px;
     cursor: pointer;
     position: relative;
 }
