--- a/styles.css
+++ b/styles.css
@@ -189,13 +189,28 @@ body {
     }
 }
 
+.popup-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Dark overlay */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
 .popup {
+    background-color: #ffffff;
     padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     width: 90%;
-    max-width: 500px;
+    max-width: 400px;
+    box-sizing: border-box;
     text-align: center;
-    max-height: 80%;
-    overflow-y: auto;
 }
 
 .popup h2 {
@@ -290,20 +305,9 @@ body {
 
 /* Popup styling */
 #filter-popup {
-    display: none;
-    flex-direction: column;
-    position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* Centers both horizontally and vertically */
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    z-index: 1001;
-    max-width: 400px; /* Maximum width */
-    width: 90%; /* Default width for responsiveness */
-    box-sizing: border-box;
+    transform: translate(-50%, -50%);
 }
 
 body.popup-active::before {
